# dlaa

./: ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  view_captures.ipynb
docs/superpowers/plans/: 2026-06-09-modularization.md  2026-06-10-depth-buffer.md  2026-06-12-frame-capture.md
docs/superpowers/specs/: 2026-06-09-modularization-design.md  2026-06-10-depth-buffer-design.md  2026-06-12-frame-capture-design.md
src/: camera.cpp  camera.h  d3d_context.cpp  d3d_context.h  d3d_helpers.h  frame_buffers.cpp  frame_buffers.h  frame_capture.cpp  frame_capture.h  main.cpp  renderer.cpp  renderer.h  shaders.hlsl
src/passes/: downsample_pass.cpp  downsample_pass.h  render_pass.h  scene_pass.cpp  scene_pass.h
